# franq-desafio

./: .gitignore  README.md  docker-compose.yml  dockerfile  main.py  pyproject.toml
.streamlit/: config.toml
prompts/: struct_agent.md  visualizer_agent.md
src/: langgraph.py
src/application/use_cases/: input2query.py  workflow.py
src/application/utils/: get_sql_dll.py
src/config/: logger.py
src/domain/entities/: agent.py  dtos.py
src/domain/exceptions/: base.py
src/domain/interfaces/: agent.py  database.py
src/infrastructure/: __init__.py
src/infrastructure/agents/: adapter.py  struct.py  visualizer.py
src/infrastructure/database/: sqlite.py
src/services/: __init__.py
src/services/use_cases/: workflow.py
src/utils/: markdown.py
