[project]
name = "franq"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "langchain>=1.2.7",
    "langchain-core>=1.2.7",
    "langchain-ollama>=1.0.1",
    "langgraph>=1.0.7",
    "pydantic>=2.12.5",
    "rich>=14.3.1",
]
